--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "fastclick": "^1.0.6",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
