--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "fastclick": "^1.0.6",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
